<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_binary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BinaryFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/tvBinary"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fontFamily="casual"
        android:textSize="60sp"
        android:gravity="center|center_vertical"
        android:text="@string/binary" />

</FrameLayout>